fix loading cached XML, fix creation time URN list, stop using new Long(..)